--- a/src/altinn-app-frontend/src/features/form/components/FullWidthWrapper.css
+++ b/src/altinn-app-frontend/src/features/form/components/FullWidthWrapper.css
@@ -1,25 +1,25 @@
 /* Only show full width for components that have full grid size (12 */
-.MuiGrid-grid-xs-12>.MuiGrid-grid-xs-12>#fullWidthWrapper {
-    margin-left: -24px;
-    margin-right: -24px;
+#fullWidthWrapper {
+  margin-left: -24px;
+  margin-right: -24px;
 }
 
 @media (min-width: 768px) {
-    .MuiGrid-grid-xs-12>.MuiGrid-grid-xs-12>#fullWidthWrapper {
-        margin-left: -84px;
-        margin-right: -84px;
-    }
+  #fullWidthWrapper {
+    margin-left: -84px;
+    margin-right: -84px;
+  }
 }
 
 @media (min-width: 993px) {
-    .MuiGrid-grid-xs-12>.MuiGrid-grid-xs-12>#fullWidthWrapper {
-        margin-left: -96px;
-        margin-right: -96px;
-    }
+  #fullWidthWrapper {
+    margin-left: -96px;
+    margin-right: -96px;
+  }
 }
 
 /* Do not use full width size for components that are part of rep groups */
 #repeating-group-edit-container #fullWidthWrapper {
-    margin-left: 0;
-    margin-right: 0;
+  margin-left: 0;
+  margin-right: 0;
 }
