--- a/src/altinn-app-frontend/src/components/base/ButtonComponent/WrappedButton.module.css
+++ b/src/altinn-app-frontend/src/components/base/ButtonComponent/WrappedButton.module.css
@@ -1,6 +1,7 @@
 .wrapped-button {
   display: inline-flex;
   padding-bottom: 2.4rem;
+  margin-top: 2.8rem;
 }
 .wrapped-button > button {
   position: relative;
