--- a/src/altinn-app-frontend/src/components/base/MultipleSelect.css
+++ b/src/altinn-app-frontend/src/components/base/MultipleSelect.css
@@ -1,32 +1,32 @@
 .multipleSelect .multipleSelect__control {
   border-radius: 0;
   border-width: 2px;
-  border-color: #008fd6;
+  border-color: var(--colors-blue-500);
 }
 
 .multipleSelect .multipleSelect__control:hover {
-  border-color: #0062ba;
+  border-color: var(--colors-blue-700);
 }
 
 .multipleSelect .multipleSelect__control--is-focused {
-  border-color: #0062ba;
+  border-color: var(--colors-blue-700);
   border-style: solid;
-  outline: 2px solid #0062ba !important;
+  outline: 2px solid var(--colors-blue-700) !important;
 }
 
 .multipleSelect .multipleSelect__control--is-disabled {
   background: repeating-linear-gradient(
     135deg,
-    #efefef,
-    #efefef 2px,
+    var(--colors-neutral-200),
+    var(--colors-neutral-200) var(--border_width-standard),
     #fff 3px,
     #fff 5px
   ) !important;
-  border-color: #6a6a6a;
+  border-color: var(--colors-neutral-600);
 }
 
 .multipleSelect .multipleSelect__is-invalid {
-  border-color: red;
+  border-color: var(--colors-error-intens);
 }
 
 .multipleSelect .multipleSelect__multi-value {
@@ -44,7 +44,8 @@
   padding-right: 6px;
 }
 
-.multipleSelect .multipleSelect__multi-value__remove:hover {
+.multipleSelect .multipleSelect__multi-value__remove:hover,
+.multipleSelect__multi-value__remove:hover {
   border-radius: 0px 50px 50px 0px;
   background-color: #e02e49;
   color: white;
@@ -62,11 +63,11 @@
 }
 
 .multipleSelect .multipleSelect__dropdown-indicator {
-  color: #022f51;
+  color: var(--colors-blue-900);
 }
 
 .multipleSelect .multipleSelect__dropdown-indicator:hover {
-  color: #022f51;
+  color: var(--colors-blue-900);
 }
 
 .multipleSelect .multipleSelect__menu-list--is-multi {
@@ -74,9 +75,9 @@
 }
 
 .multipleSelect .multipleSelect__option {
-  border: 1px solid lightgray;
+  border: var(--border_width-thin) solid lightgray;
 }
 
 .multipleSelect .multipleSelect__option--is-focused {
-  background-color: #e3f7ff;
+  background-color: var(--colors-primary-200);
 }
