Add instance information and appOwner

--- a/src/features/pdf/PDFView.module.css
+++ b/src/features/pdf/PDFView.module.css
@@ -1,6 +1,14 @@
 .pdf-wrapper h1 {
   font-size: xx-large;
-  margin-bottom: 2rem;
+  margin-bottom: 0;
+}
+
+.title-margin {
+  margin-bottom: 2rem !important;
+}
+
+.pdf-wrapper p[role='doc-subtitle'] {
+  font-size: x-large;
 }
 
 .component-container {
