--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@ body {
   background-color: #efefef;
 }
 
+@media print {
+  body {
+    background-color: white !important;
+  }
+}
+
 input:checked + .slider {
   background-color: #1eaef7;
 }
