--- a/src/shared/components/Footer.module.css
+++ b/src/shared/components/Footer.module.css
@@ -26,6 +26,12 @@
   color: var(--colors-interaction-button-default);
 }
 
+.link:focus-visible {
+  outline: var(--interactive_components-colors-focus_outline) solid var(--border_width-standard);
+  outline-offset: var(--border_width-standard);
+  color: var(--colors-interaction-button-default);
+}
+
 .link svg {
   margin-right: 8px;
   vertical-align: text-bottom;
