--- a/src/features/footer/Footer.module.css
+++ b/src/features/footer/Footer.module.css
@@ -4,6 +4,7 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 30px 50px;
@@ -20,34 +21,4 @@
     max-width: 1056px;
     padding: 60px 0;
   }
-}
-
-.link {
-  color: var(--colors-interaction-button-default);
-}
-
-.link:focus-visible {
-  outline: var(--interactive_components-colors-focus_outline) solid var(--border_width-standard);
-  outline-offset: var(--border_width-standard);
-  color: var(--colors-interaction-button-default);
-}
-
-.link svg {
-  margin-right: 8px;
-  vertical-align: text-bottom;
-}
-
-.link::after {
-  display: unset !important;
-  width: unset !important;
-  background-image: unset !important;
-  background-repeat: unset !important;
-  background-size: unset !important;
-  vertical-align: unset !important;
-  margin-top: unset !important;
-  margin-left: unset !important;
-  content: unset !important;
-  white-space: unset !important;
-  overflow: unset !important;
-  text-indent: unset !important;
 }
