--- a/src/styles/tjenester3.css
+++ b/src/styles/tjenester3.css
@@ -20888,9 +20888,7 @@ a:not(.collapsed) .expandText {
   color: #022f51;
 }
 
-a[href^='http']:not([href*='pdf']):not([href*='altinn.no']):not([href*='altinn.cloud']):not([href*='basefarm.net']):not(
-    [href*='local.altinn']
-  )::after {
+a[target='_blank']::after {
   display: inline-block;
   width: 1.3em;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 36 36'%3E%3Cstyle%3E.st0%7Bfill:%23022f51%7D.st1%7Bfill:%23fff%7D.st2,.st3,.st4%7Bfill:none;stroke:%23fff;stroke-width:2.5;stroke-miterlimit:10%7D.st3,.st4%7Bstroke-width:2%7D.st4%7Bfill:%23fff%7D.st5%7Bfill:none%7D.st5,.st6,.st7,.st8%7Bstroke:%23022f51;stroke-miterlimit:10%7D.st6%7Bstroke-width:.9636;fill:none%7D.st7,.st8%7Bfill:%23fff%7D.st8%7Bfill:%23022f51%7D.st9%7Bopacity:.3%7D.st10%7Bfill:%23ff1d25%7D.st11%7Bfill:none;stroke:%23022f51;stroke-width:8;stroke-miterlimit:10%7D.st12%7Bopacity:.5;stroke:%23ffa683;stroke-width:2%7D.st12,.st13,.st14%7Bfill:none;stroke-miterlimit:10%7D.st13%7Bopacity:.5;stroke:%23ffa683;stroke-width:1.4142%7D.st14%7Bstroke:%23022f51;stroke-width:4%7D%3C/style%3E%3Cpath class='st0' d='M15 11v2h8.7L12.1 24.7l1.4 1.4L25 14.6V24h2V11z' id='Layer_1'/%3E%3C/svg%3E");
