update changed figma-tokens

--- a/src/index.css
+++ b/src/index.css
@@ -262,8 +262,8 @@ select.disabled {
 
 .a-modal-back[type='button']:focus-visible,
 .a-modal-close[type='button']:focus-visible {
-  outline: var(--interactive_components-colors-focus_outline) solid var(--border_width-standard);
-  outline-offset: var(--border_width-standard);
+  outline: var(--semantic-tab_focus-outline-color) solid var(--semantic-tab_focus-outline-width);
+  outline-offset: var(--semantic-tab_focus-outline-offset);
 }
 
 .a-modal-back,
