update class names

--- a/src/layout/Likert/LikertComponent.module.css
+++ b/src/layout/Likert/LikertComponent.module.css
@@ -2,13 +2,13 @@
   padding-top: 12px;
 }
 
-.likertGroupTableHeader {
+.likertTableHeader {
   white-space: 'normal';
   font-weight: 400;
   border-bottom: '1px solid rgb(0, 143, 214)';
   padding-left: 12;
 }
 
-.likertGroupTableCell {
+.likertTableCell {
   padding: 4px 12px;
 }
