--- a/src/layout/Likert/LikertComponent.module.css
+++ b/src/layout/Likert/LikertComponent.module.css
@@ -3,10 +3,10 @@
 }
 
 .likertTableHeader {
-  white-space: 'normal';
+  white-space: normal;
   font-weight: 400;
-  border-bottom: '1px solid rgb(0, 143, 214)';
-  padding-left: 12;
+  border-bottom: 1px solid rgb(0, 143, 214);
+  padding-left: 12px;
 }
 
 .likertTableCell {
