--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,41 @@
 @import 'src/styles/tjenester3.css';
 
+/* Global variables */
+:root {
+  --table-input-margin: 15px; /* From design-system, move to figma-tokens? */
+
+  --modal-padding-x: 24px;
+  --modal-padding-y: 24px;
+
+  --page-max-width: none;
+  --page-padding-x: 24px;
+
+  --repeating-group-edit-surface-color: #f1fbff;
+  --repeating-group-edit-border-color: var(--colors-blue-400);
+  --repeating-group-edit-divider-color: var(--colors-blue-200);
+  --repeating-group-error-color: var(--colors-red-200);
+}
+
+@media only screen and (min-width: 768px) {
+  :root {
+    --modal-padding-x: 84px;
+    --modal-padding-y: 36px;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  :root {
+    --modal-padding-x: 96px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  :root {
+    --page-max-width: 1056px;
+    --page-padding-x: 0;
+  }
+}
+
 /* Custom CSS for all app */
 
 /* Workaround to avoid (PDF) postfix from Altinn designsystem */
