--- a/src/features/form/components/MessageBanner.module.css
+++ b/src/features/form/components/MessageBanner.module.css
@@ -1,6 +1,8 @@
 .banner {
-  margin: calc(var(--modal-padding-y) * -1) calc(var(--modal-padding-x) * -1) var(--modal-padding-y)
-    calc(var(--modal-padding-x) * -1);
+  margin-top: calc(var(--modal-padding-y) * -1);
+  margin-right: calc(var(--modal-padding-x) * -1);
+  margin-bottom: var(--modal-padding-y);
+  margin-left: calc(var(--modal-padding-x) * -1);
   padding: 10px var(--modal-padding-x);
 }
 
