Streamlining code to avoid rendering an empty cell in two different ways. Fixing the readOnly color, as it didn't match the input field.

--- a/src/layout/Grid/Grid.module.css
+++ b/src/layout/Grid/Grid.module.css
@@ -3,5 +3,5 @@
 .rowReadOnly th {
   /* TODO: Use design tokens here instead? */
   /*background-color: var(--component-input-read_only_info-color-background-default);*/
-  background-color: #fbf6bd;
+  background-color: #fff4b4;
 }
