Oooh, apparently we _can_ use the design system here (Webstorm just can't resolve it), and somebody _did_ rewrite the FullWidthWrapper to css modules! Hooray!

--- a/src/layout/Grid/Grid.module.css
+++ b/src/layout/Grid/Grid.module.css
@@ -1,7 +1,13 @@
 .rowReadOnly,
 .rowReadOnly td,
 .rowReadOnly th {
-  /* TODO: Use design tokens here instead? */
-  /*background-color: var(--component-input-read_only_info-color-background-default);*/
-  background-color: #fff4b4;
+  background-color: var(--component-input-read_only_info-color-background-default);
+}
+
+.fullWidthCellFirst {
+  padding-left: var(--modal-padding-x);
+}
+
+.fullWidthCellLast {
+  padding-right: var(--modal-padding-x);
 }
