--- a/src/features/devtools/DevTools.module.css
+++ b/src/features/devtools/DevTools.module.css
@@ -8,18 +8,19 @@
 }
 
 .panel {
-  background-color: white;
+  background-color: #efefef;
   z-index: 10000;
   position: fixed;
   bottom: 0;
   width: 100%;
   max-height: 100%;
+  min-height: 10px;
 }
 
 .handle {
   width: 100%;
   height: 10px;
-  background-color: #ddd;
+  background-color: #333;
   cursor: ns-resize;
   display: flex;
   flex-direction: row;
@@ -29,7 +30,7 @@
 
 .dots {
   width: 30px;
-  border-top: 5px dotted #333;
+  border-top: 5px dotted #efefef;
 }
 
 .panelContent {
