--- a/src/features/devtools/DevTools.module.css
+++ b/src/features/devtools/DevTools.module.css
@@ -41,10 +41,12 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 8px;
 }
 
 .controlsWrapper {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  align-items: flex-start;
+  gap: 16px;
 }
