--- a/src/features/devtools/DevTools.module.css
+++ b/src/features/devtools/DevTools.module.css
@@ -38,6 +38,9 @@
 
 .panelContent {
   padding: 8px 16px;
+  height: calc(100% - 10px);
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
@@ -48,6 +51,8 @@
 }
 
 .controlsWrapper {
+  flex: 1;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
