--- a/src/layout/Group/SummaryGroupComponent.module.css
+++ b/src/layout/Group/SummaryGroupComponent.module.css
@@ -37,7 +37,7 @@
 }
 
 .emptyField {
-  font-style: 'italic';
+  font-style: italic;
   font-size: 1rem;
   line-height: 1.6875;
   margin-top: 4px;
