--- a/src/layout/Group/SummaryGroupComponent.module.css
+++ b/src/layout/Group/SummaryGroupComponent.module.css
@@ -31,7 +31,7 @@
 .link {
   background: none;
   border: none;
-  border-bottom: 2px solid #008fd6;
+  border-bottom: var(--solid-border-primary);
   cursor: pointer;
   padding-left: 0px;
 }
