--- a/src/layout/Summary/SummaryComponent.module.css
+++ b/src/layout/Summary/SummaryComponent.module.css
@@ -1,13 +1,13 @@
 .border {
   margin-bottom: 10px;
   padding-bottom: 10px;
-  border-bottom: 1px dashed var(--file-list-border-color);
+  border-bottom: var(--dashed-border-primary);
 }
 
 .link {
   background: none;
   border: none;
-  border-bottom: 2px solid var(--file-list-border-color);
+  border-bottom: var(--solid-border-primary);
   cursor: pointer;
   padding-left: 0px;
 }
