Implementing support for editing/displaying components directly in table

--- a/src/layout/Group/RepeatingGroup.module.css
+++ b/src/layout/Group/RepeatingGroup.module.css
@@ -82,6 +82,10 @@
   text-align: var(--cell-text-alignment);
 }
 
+.spaceAfterContent {
+  padding-right: 5px;
+}
+
 .tableCellFormatting {
   --cell-width: auto;
   width: var(--cell-width);
