--- a/src/layout/Summary/SummaryContent.module.css
+++ b/src/layout/Summary/SummaryContent.module.css
@@ -5,10 +5,8 @@
 .label {
   font-weight: 400;
   grid-area: label;
-  grid: 1/-1;
 }
-.labelError,
-.labelError p {
+.labelError {
   color: #d5203b;
 }
 
