margin and devtools are working properly

--- a/src/layout/InstantiationButton/InstantiationButton.module.css
+++ b/src/layout/InstantiationButton/InstantiationButton.module.css
@@ -1,11 +1,4 @@
-.buttonGroup {
-  margin-top: 2.25rem;
-}
-@media only screen and (max-width: 640px) {
-  .buttonGroup span {
-    width: 100%;
-  }
-  .buttonGroup button {
-    width: 100%;
-  }
+.container {
+  display: flex;
+  gap: var(--button-gap);
 }
