--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,9 @@
   --dashed-border-primary: 1px dashed var(--border-color-primary);
   --solid-border-primary: 2px solid var(--border-color-primary);
   --dotted-border-primary: 2px dotted var(--border-color-primary);
+
+  --button-margin-top: 2rem;
+  --button-gap: 0.75rem;
 }
 
 @media only screen and (min-width: 768px) {
