--- a/src/layout/Button/ButtonLoader.module.css
+++ b/src/layout/Button/ButtonLoader.module.css
@@ -1,7 +1,7 @@
 .button-loader {
-  height: 0px;
-  width: 0px;
+  width: 0;
+  height: 0;
   position: absolute;
-  right: calc(50% + 0.3125em);
-  top: 0.3125em;
+  margin-top: -1.8rem;
+  margin-left: -0.6rem;
 }
