removed altinn-din and unused styling

--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,27 @@
 
 /* Font */
 
-:root {
+* {
   font-family: 'Inter', sans-serif;
+  --font_family-default: 'Inter', sans-serif;
+  --font_family-heading: 'Inter', sans-serif;
+  --font_family-ingress: 'Inter', sans-serif;
+  --font_family-body: 'Inter', sans-serif;
+  --font_family-label: 'Inter', sans-serif;
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: 1.5;
+  text-align: left;
 }
 @supports (font-variation-settings: normal) {
   @media only screen {
-    :root {
+    * {
       font-family: 'Inter var', sans-serif;
+      --font_family-default: 'Inter var', sans-serif;
+      --font_family-heading: 'Inter var', sans-serif;
+      --font_family-ingress: 'Inter var', sans-serif;
+      --font_family-body: 'Inter var', sans-serif;
+      --font_family-label: 'Inter var', sans-serif;
       font-feature-settings: 'cv05';
     }
   }
