Overrides with more information for both text resource bindings and data model bindings

--- a/src/features/devtools/components/NodeInspector/NodeInspector.module.css
+++ b/src/features/devtools/components/NodeInspector/NodeInspector.module.css
@@ -68,3 +68,9 @@ dd.typeNull {
 dd.typeUnknown {
   color: darkred;
 }
+
+.json {
+  white-space: pre;
+  font-family: monospace;
+  background-color: #efefef;
+}
