--- a/src/layout/FileUploadWithTag/FileListComponent.module.css
+++ b/src/layout/FileUploadWithTag/FileListComponent.module.css
@@ -1,7 +1,3 @@
-.customStyleEditButton {
-  display: inline-block !important;
-}
-
 .table {
   word-break: break-word;
   text-overflow: ellipsis;
@@ -67,23 +63,17 @@
 }
 
 .tableBody tr td {
-  padding: 4px 4px 4px 6px;
-  font-size: 0.75rem;
+  padding: 10px 4px 10px 6px;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
   font-family: 'Altinn-DIN', sans-serif;
   font-weight: 400;
+  font-size: 1rem;
   border-bottom: 1px dotted var(--border-color-primary);
   color: #000;
 }
-
-.textContainer {
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  color: #000;
-  font-weight: 500 !important;
-  font-size: 0.875rem;
-  min-width: 0px;
+.tableBody tr td:last-child > button {
+  float: right;
+  padding-right: 0;
 }
