--- a/src/components/form/FullWidthWrapper.module.css
+++ b/src/components/form/FullWidthWrapper.module.css
@@ -1,13 +1,15 @@
-.fullWidth {
-  margin-left: calc(var(--modal-padding-x) * -1);
-  margin-right: calc(var(--modal-padding-x) * -1);
-  width: calc(100% + 2 * var(--modal-padding-x));
-}
+@media only screen {
+  .fullWidth {
+    margin-left: calc(var(--modal-padding-x) * -1);
+    margin-right: calc(var(--modal-padding-x) * -1);
+    width: calc(100% + 2 * var(--modal-padding-x));
+  }
 
-.consumeBottomPadding {
-  margin-bottom: calc(var(--modal-padding-y) * -1);
-}
+  .consumeBottomPadding {
+    margin-bottom: calc(var(--modal-padding-y) * -1);
+  }
 
-.consumeTopPadding {
-  margin-top: calc(var(--modal-padding-y) * -1);
+  .consumeTopPadding {
+    margin-top: calc(var(--modal-padding-y) * -1);
+  }
 }
