--- a/src/layout/FileUploadWithTag/FileListComponent.module.css
+++ b/src/layout/FileUploadWithTag/FileListComponent.module.css
@@ -8,6 +8,7 @@
   table-layout: fixed;
   margin-top: 1.5rem;
   margin-bottom: 12px;
+  box-shadow: none;
 }
 
 .tableMobile {
@@ -76,4 +77,10 @@
 .tableBody tr td:last-child > button {
   float: right;
   padding-right: 0;
+}
+
+.fileStatus {
+  display: flex;
+  align-items: center;
+  gap: 3px;
 }
