--- a/src/layout/Group/DisplayGroupContainer.module.css
+++ b/src/layout/Group/DisplayGroupContainer.module.css
@@ -1,11 +1,12 @@
 .groupTitle {
-  font-weight: 700;
-  font-size: '1.5rem';
-  padding-bottom: 12px;
+  font-weight: 500;
+  font-size: 1.25rem;
+  margin-bottom: 0;
 }
 
 .groupBody {
-  padding-bottom: 12px;
+  margin-top: 12px;
+  margin-bottom: 0;
 }
 
 .groupContainer {
@@ -15,7 +16,8 @@
 .groupingIndicator {
   border-left: 2px solid #949494;
   margin-left: 12px !important;
-  margin-bottom: 0 !important;
+  margin-bottom: 12px !important;
+  margin-top: 12px !important;
   padding-top: 0 !important;
   padding-bottom: 0 !important;
 }
