dropzone icon adjustment

--- a/src/layout/FileUpload/shared/DropzoneComponent.module.css
+++ b/src/layout/FileUpload/shared/DropzoneComponent.module.css
@@ -1,3 +1,8 @@
+.uploadIcon {
+  font-size: 3rem !important;
+  margin-bottom: 15px;
+}
+
 .fileUploadWrapper {
   display: flex;
   flex-direction: column;
