--- a/src/layout/FileUploadWithTag/FileListComponent.module.css
+++ b/src/layout/FileUploadWithTag/FileListComponent.module.css
@@ -74,7 +74,7 @@
   border-bottom: 1px dotted var(--border-color-primary);
   color: #000;
 }
-.tableBody tr td:last-child > button {
+.editButton {
   float: right;
   padding-right: 0;
 }
